Fixed webkit scrollbar track transparency

--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -8,6 +8,12 @@
 body {
   font-family: 'Helsinki Grotesk Regular', sans-serif;
 }
+
+body ::-webkit-scrollbar-track {
+  background: rgb(217 217 217);
+  border-radius: 0;
+}
+
 h1 {
   color: $color-black;
   font-family: 'Helsinki Grotesk Bold', sans-serif;
